terminal/deploy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse-terminal
  namespace: synapse
  labels:
    app: synapse
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - secretName: synapse-terminal-tls-serving
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: synapse-terminal
            port:
              number: 80
